--- a/sass/modules/_comment-form.scss
+++ b/sass/modules/_comment-form.scss
@@ -314,6 +314,9 @@
   p {
     margin: 0;
   }
+  .logged-in-as{
+    margin: 20px 0;
+  }
 
   .contacts-email,
   .contacts-name,
